# Cerebrum-Company-AI-Platform

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pyproject.toml
apps/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 3f6a9d2c8e15_add_workflow_tables.py  41ff4259fcf2_add_identity_and_security_foundation_.py  4f8c1a2b7e33_add_chunking_and_manifest_tables.py  5e40353ba43a_add_conversations_and_messages_tables.py  5e80424c81fd_add_connector_tables.py  7b1f2d4e6a90_add_document_extractions_table.py  7c2e4b8a1f36_add_capsule_tables.py  9a2e5c8f1b47_add_entities_and_relationships_tables.py  9c3e7a1b5d84_add_knowledge_domain_and_document_.py  README.md
apps/backend/scripts/: create_admin.py
apps/backend/src/cerebrum/: __init__.py  main.py
apps/backend/src/cerebrum/api/: __init__.py  health.py  openapi_responses.py  response_builder.py  router.py  version_routes.py  versions.py
apps/backend/src/cerebrum/api/schemas/: __init__.py  ai.py  auth.py  base.py  capsule.py  connector.py  conversation.py  envelope.py  files.py  health.py  knowledge.py  knowledge_graph.py  retrieval.py  semantic.py  versions.py  workflow.py
apps/backend/src/cerebrum/api/v1/: __init__.py  ai.py  auth.py  capsules.py  collections.py  connectors.py  conversations.py  documents.py  entities.py  folders.py  knowledge_graph.py  labels.py  organizations.py  processing_jobs.py  relationships.py  retrieval.py  router.py  semantic.py  tags.py  workflows.py  workspaces.py
apps/backend/src/cerebrum/application/: __init__.py
apps/backend/src/cerebrum/application/ai/: __init__.py  ai_response_service.py  citation_formatter.py  events.py  prompt_builder_service.py  rag_service.py  safety.py  usage_stats_service.py
apps/backend/src/cerebrum/application/auth/: __init__.py  api_key_service.py  audit_service.py  authentication_service.py  authorization_service.py  dtos.py
apps/backend/src/cerebrum/application/capsules/: __init__.py  capsule_graph_service.py  continuous_updates.py  dataclasses_.py  employee_knowledge_capsule_service.py  events.py  expertise_inference_service.py  organizational_memory_service.py  ownership_inference_service.py  risk_analysis_service.py  successor_planning_service.py
apps/backend/src/cerebrum/application/connectors/: __init__.py  connector_service.py  connector_sync_service.py  events.py  scheduler.py
apps/backend/src/cerebrum/application/conversation/: __init__.py  conversation_service.py  conversation_summary_service.py  events.py  memory_service.py  session_service.py
apps/backend/src/cerebrum/application/knowledge/: __init__.py  chunking_service.py  collection_service.py  document_service.py  events.py  extraction_service.py  folder_service.py  knowledge_preparation_service.py  label_service.py  metadata_service.py  organization_service.py  processing_service.py  tag_service.py  upload_service.py  version_service.py  workspace_service.py
apps/backend/src/cerebrum/application/knowledge_graph/: __init__.py  (+5 more)
apps/backend/src/cerebrum/config/: __init__.py  ai.py  api.py  application.py  database.py  documents.py  environment.py  infrastructure.py  logging.py  minio.py  monitoring.py  neo4j.py  opensearch.py  qdrant.py  redis.py  security.py  settings.py  worker.py
apps/backend/src/cerebrum/core/: __init__.py  background.py  exception_handlers.py  factory.py  lifecycle.py  logging.py  metadata.py  observability.py  openapi.py  routers.py  state.py
apps/backend/src/cerebrum/dependencies/: __init__.py  ai.py  auth.py  capsules.py  connectors.py  conversation.py  database.py  infrastructure.py  knowledge.py  knowledge_graph.py  logging.py  pagination.py  rate_limit.py  request_context.py  retrieval.py  semantic.py  settings.py  state.py  workflows.py
apps/backend/src/cerebrum/domain/: __init__.py
apps/backend/src/cerebrum/events/: __init__.py  base.py  dispatcher.py
apps/backend/src/cerebrum/infrastructure/: __init__.py  health.py  retry.py
apps/backend/src/cerebrum/middleware/: __init__.py  authentication.py  context.py  correlation_id.py  logging.py  metrics.py  registry.py  request_context.py  request_id.py  request_size_limit.py  request_timing.py  security_headers.py
apps/backend/src/cerebrum/repositories/: __init__.py  base.py  contracts.py  soft_delete.py
apps/backend/src/cerebrum/services/: __init__.py
apps/backend/src/cerebrum/shared/: __init__.py
apps/backend/src/cerebrum/utils/: __init__.py  clock.py  identifiers.py
apps/backend/src/cerebrum/workers/: __init__.py  base.py  queue.py  scheduler.py
apps/backend/tests/: conftest.py
apps/backend/tests/ai_evaluation/: README.md
apps/backend/tests/e2e/: README.md
apps/backend/tests/integration/: README.md
apps/backend/tests/performance/: README.md
apps/backend/tests/unit/: README.md  _auth_factories.py  test_ai_api.py  test_ai_response_service.py  test_ai_safety.py  test_ai_usage_stats_service.py  test_api_key_service.py  test_api_versions.py  test_auth_api.py  test_authentication_service.py  test_authorization_service.py  test_capsule_api.py  test_capsule_inference_services.py  test_capsule_repository.py  test_capsule_risk_and_successor_services.py  test_chunking_service.py  test_chunking_strategies.py  test_citation_formatter.py  test_citation_service.py  test_configuration.py  test_connector_api.py  test_connector_repository.py  test_connector_scheduler.py  test_connector_service.py  test_connector_sync_service.py  test_connectors.py  test_context_builder_service.py  test_conversation_api.py  test_conversation_repository.py  test_conversation_service.py  test_conversation_summary_service.py  test_deduplication.py  test_embedding_providers.py  test_embedding_service.py  test_employee_knowledge_capsule_service.py  test_entity_extractors.py  test_entity_service.py  test_event_dispatcher.py  test_exceptions.py  test_explainability_service.py  (+62 more)
(+528 files in other folders)
