[project]
name = "cerebrum-backend"
version = "0.1.0"
description = "Cerebrum backend — the modular monolith implementing all 30 CES functional domains. See docs/architecture/specification/30_System_Architecture.md."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }

# ==============================================================================
# Dependencies are intentionally minimal at Repository Foundation (Phase 1,
# Prompt 1). No API endpoints, database models, or business logic exist yet
# per that milestone's scope — see apps/backend/README.md. Framework
# dependencies are pinned here so the package installs cleanly and future
# prompts can build on a known-good base without re-deciding versions.
# ==============================================================================
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "uvicorn[standard]>=0.31.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cerebrum"]

# Shared tool configuration ([tool.black], [tool.ruff], [tool.isort],
# [tool.mypy], [tool.pytest.ini_options]) is defined once at the workspace
# root (../../pyproject.toml) and applies here — see
# docs/architecture/specification/99_Coding_Standards.md. This file does
# not repeat it.
