[project]
name = "cerebrum-backend"
version = "0.1.0"
description = "Cerebrum backend — the modular monolith implementing all 30 CES functional domains. See docs/architecture/specification/30_System_Architecture.md."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }

# ==============================================================================
# Framework dependencies (Phase 1, Prompt 3 — Enterprise Backend Platform
# Foundation) plus infrastructure client libraries (Phase 1, Prompt 4 —
# Enterprise Data & Infrastructure Foundation). No ORM models, business
# repositories, or business logic exist yet per that milestone's explicit
# scope — see apps/backend/README.md and docs/architecture/infrastructure/.
# ==============================================================================
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.31.0",
    "structlog>=24.4.0",
    # --- Infrastructure clients (Phase 1, Prompt 4) --------------------------
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "redis>=5.0.8",
    "neo4j>=5.24.0",
    "qdrant-client>=1.11.3",
    "minio>=7.2.9",
    "opensearch-py[async]>=2.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
]

[project.scripts]
cerebrum = "cerebrum.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cerebrum"]

# Shared tool configuration ([tool.black], [tool.ruff], [tool.isort],
# [tool.mypy], [tool.pytest.ini_options]) is defined once at the workspace
# root (../../pyproject.toml) and applies here — see
# docs/architecture/specification/99_Coding_Standards.md. This file does
# not repeat it.
