[project]
name = "cerebrum-backend"
version = "0.1.0"
description = "Cerebrum backend — the modular monolith implementing all 30 CES functional domains. See docs/architecture/specification/30_System_Architecture.md."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }

# ==============================================================================
# Framework dependencies (Phase 1, Prompt 3 — Enterprise Backend Platform
# Foundation), infrastructure client libraries (Phase 1, Prompt 4 —
# Enterprise Data & Infrastructure Foundation), and identity/security
# libraries (Phase 1, Prompt 5 — Identity, Security & Multi-Tenancy
# Foundation). No business repositories or business logic beyond the
# identity/security platform itself exist yet — see apps/backend/README.md,
# docs/architecture/infrastructure/, and docs/architecture/security/.
# ==============================================================================
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.31.0",
    "structlog>=24.4.0",
    # --- Infrastructure clients (Phase 1, Prompt 4) --------------------------
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "redis>=5.0.8",
    "neo4j>=5.24.0",
    "qdrant-client>=1.11.3",
    "minio>=7.2.9",
    "opensearch-py[async]>=2.7.1",
    # --- Identity & Security (Phase 1, Prompt 5) -----------------------------
    "pyjwt>=2.9.0",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    # --- Document parsing (Phase 2, Prompt 3) --------------------------------
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "beautifulsoup4>=4.15.0",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "types-openpyxl>=3.1.5",
]

[project.scripts]
cerebrum = "cerebrum.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cerebrum"]

# Shared tool configuration ([tool.black], [tool.ruff], [tool.isort],
# [tool.mypy], [tool.pytest.ini_options]) is defined once at the workspace
# root (../../pyproject.toml) and applies here — see
# docs/architecture/specification/99_Coding_Standards.md. This file does
# not repeat it.
